--- a/MvcCoreAdoNet/Views/Shared/_Layout.cshtml
+++ b/MvcCoreAdoNet/Views/Shared/_Layout.cshtml
@@ -99,7 +99,11 @@
                         <li class="nav-item">
 
                             @Html.ActionLink("New Hospital", "Create", "Hospitales")
-                        </li>                     
+                        </li>
+                        <li class="nav-item">
+
+                            @Html.ActionLink("Doctores", "DoctoresEspecialidad", "Doctores")
+                        </li>
                     </ul>
                     <form class="d-flex" role="search">
                         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
